# travel-planner

./: .gitignore  README-setup.md  README.md  docker-compose.yml  travel-planner-plan.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  003_add_booking_agent.py
backend/app/: auth.py  config.py  database.py  encryption.py  main.py  models.py  worker.py
backend/app/routers/: profile.py  trips.py
backend/app/services/: amadeus.py  booking_agent.py  confirmation.py  email.py  itinerary.py  virtual_card.py
backend/app/tasks/: __init__.py  booking_tasks.py
frontend/: env.local.example  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/profile/: route.ts
frontend/app/api/trips/[id]/book/: route.ts
frontend/app/api/trips/[id]/bookings/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/trips/[id]/: page.tsx
frontend/components/: BookingStatus.tsx  ItineraryCard.tsx  ProfileForm.tsx  SignInButton.tsx  SignOutButton.tsx
frontend/lib/: auth.ts
