[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "Travel planner FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "cryptography==44.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
